Modld 73 bibframe update fixes (#24)
* MODLD-73: extent.appliesTo fix

* MODLD-73: extent.note and instance.note fix

* MODLD-73: note conversion fix for all parents

* MODLD-73: AppliesToMapperUnit extracted

* MODLD-73: fix Multiple representations of the same entity Error

* MODLD-73: minor fixes